# fast-api-practise

./: README.md  basic-rag.py  main.py  pyproject.toml  rag_financial.py  requirements.txt
