[project]
name = "fast-api-practise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "groq>=0.23.1",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.56",
    "langchain-openai>=0.3.14",
    "langchain-qdrant>=0.2.0",
    "pypdf>=5.4.0",
    "qdrant-client>=1.14.2",
    "uvicorn>=0.34.2",
]
